# EZTFinder5

./: pifinder_post_update.sh  pifinder_setup.sh  pifinder_update.sh  switch-ap.sh  switch-cli.sh
astro_data/: comets.txt
pi_config_files/: pifinder.service  pifinder_splash.service
python/: inditest.py
python/PiFinder/: calc_utils.py  camera_pi.py  catalogs.py  gps_gpsd.py  keyboard_local.py  keyboard_pi.py  main.py  mountcontrol_indi.py  mountcontrol_interface.py  mountcontrol_move.py  server.py  solver.py  state.py  sys_utils.py  utils.py
python/PiFinder/sqm/ui/: menu_structure.py
python/PiFinder/tetra3/: .readthedocs.yaml  LICENSE.txt  README.rst  pyproject.toml
python/PiFinder/tetra3/docs/: conf.py  installation.rst
python/PiFinder/tetra3/examples/: test_tetra3.py
python/PiFinder/tetra3/scripts/: compile_proto.py  get-version.py  validate-version.py
python/PiFinder/tetra3/tests/: conftest.py  test_cedar_detect_client.py  test_fov_util.py  test_generate_database.py  test_sky_fovs.py  test_tetra3.py
python/PiFinder/tetra3/tests/data/: CREDITS.md
python/PiFinder/tetra3/tetra3/: breadth_first_combinations.py  cedar_detect_client.py  cedar_detect_pb2.py  cedar_detect_pb2.pyi  cedar_detect_pb2_grpc.py  tetra3.py
python/PiFinder/tetra3/tetra3/cli/: generate_database.py
python/PiFinder/tetra3/tetra3/proto/: cedar_detect.proto
python/PiFinder/ui/: callbacks.py  fonts.py  location_list.py  marking_menus.py  menu_manager.py  menu_structure.py  object_details.py  preview.py  text_menu.py
python/locale/ko/LC_MESSAGES/: messages.mo  messages.po
python/views/: network_item.tpl
