[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cedar-solve"
version = "0.5.1"
description = "A fast lost-in-space plate solver for star trackers. Forked from esa/tetra3."
readme = "README.rst"
authors = [{ name = "Steven Rosenthal" }]
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
keywords = ["astronomy"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "numpy >= 1.21.1,<2",
    "Pillow >= 8.3.1,<9",
    'scipy >= 1.7.1,<2',
]

[project.urls]
docs = "https://tetra3.readthedocs.io/en/latest/"
Source = "https://github.com/smroid/cedar-solve"
Issues = "https://github.com/smroid/cedar-solve/issues"
Releases = "https://github.com/smroid/cedar-solve/releases"

[project.optional-dependencies]
cedar-detect = [
    "grpcio",
    "protobuf",
]
dev = [
    "pytest",
    "build",
    "grpcio-tools",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.scripts]
tetra3-gen-db = "tetra3.cli.generate_database:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"tetra3.data" = ["default_database.npz"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tetra3*"]
exclude = [
    "tests",
    "docs",
    "scripts",
    "examples",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "slow: These tests are slow (deselect with '-m \"not slow\"')",
]
